--- a/n/no/nol/nola.com.html
+++ b/n/no/nol/nola.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nola.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604144012id_/http%3A//nola.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nola.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207054022id_/http%3A//www.nola.com/privacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>NOLA.com: Privacy Policy</title>
@@ -27,21 +27,23 @@
 var position = 0;
 if (!document.ad) window.setTimeout('rotate();', 3000);
 function ClickThrough() {
-if (position==1) window.open("http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/428019593/ImageLink/NOLALIVE/HORNETS01NL01/04season130x60.gif/64316564656562313430633038396330", 'new','location,menubar , resizable,scrollbars,status,toolbar');
-if (position==2) window.open("http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/428019593/ImageLink/NOLALIVE/CAESARS02NL02/nola_site_sponsor.gif/64316564656562313430633038396330", 'new','location,menubar , resizable,scrollbars,status,toolbar');
+if (position==1) window.open("http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/945550851/ImageLink/NOLALIVE/HORNETS01NL01/holiday130x60.gif/64316564656562313431623534323330", 'new','location,menubar , resizable,scrollbars,status,toolbar');
+if (position==2) window.open("http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/945550851/ImageLink/NOLALIVE/HOTARD01NL01/hotard130x602.gif/64316564656562313431623534323330", 'new','location,menubar , resizable,scrollbars,status,toolbar');
+if (position==3) window.open("http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/945550851/ImageLink/NOLALIVE/CAESARS02NL02/nola_site_sponsor.gif/64316564656562313431623534323330", 'new','location,menubar , resizable,scrollbars,status,toolbar');
 }
 function rotate() {
 position++;
-if (position > 2)  position = 1;
-if (position==1) document.ad.src ="http://ads1.advance.net/RealMedia/ads/Creatives/NOLALIVE/HORNETS01NL01/04season130x60.gif";
-if (position==2) document.ad.src ="http://ads1.advance.net/RealMedia/ads/Creatives/NOLALIVE/CAESARS02NL02/nola_site_sponsor.gif";
+if (position > 3)  position = 1;
+if (position==1) document.ad.src ="http://ads1.advance.net/RealMedia/ads/Creatives/NOLALIVE/HORNETS01NL01/holiday130x60.gif";
+if (position==2) document.ad.src ="http://ads1.advance.net/RealMedia/ads/Creatives/NOLALIVE/HOTARD01NL01/hotard130x602.gif";
+if (position==3) document.ad.src ="http://ads1.advance.net/RealMedia/ads/Creatives/NOLALIVE/CAESARS02NL02/nola_site_sponsor.gif";
 window.setTimeout ('rotate();',3000);
 }
 </script>
 <a href="javascript:ClickThrough();">
-<img name="ad" src="http://ads1.advance.net/RealMedia/ads/Creatives/NOLALIVE/CAESARS02NL02/nola_site_sponsor.gif" border="0"></a><br><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountfrg-pbbxvr:+EZVQ=q1rqrro140p089p0;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1"></td>
+<img name="ad" src="http://ads1.advance.net/RealMedia/ads/Creatives/NOLALIVE/CAESARS02NL02/nola_site_sponsor.gif" border="0"></a><br><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountFrg-Pbbxvr:+EZVQ=q1rqrro141o54230;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1"></td>
 <td width="8"><img src="/images/spacer.gif" width="2" height="2" hspace="3" vspace="29"></td>
-<td width="468"><a href="http://ads5.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/737687224/BannerTop/NOLALIVE/MK_BLJPHOTO3_NL01/468_60_copy4_no51.gif/64316564656562313430633038396330" target="_blank"><img src="http://ads5.udc.advance.net/RealMedia/ads/Creatives/NOLALIVE/MK_BLJPHOTO3_NL01/468_60_copy4_no51.gif" width="468" height="60" alt="" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountfrg-pbbxvr:+EZVQ=q1rqrro140p089p0;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1"></td></tr>
+<td width="468"><a href="http://ads4.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/889103315/BannerTop/NOLALIVE/TIMESPIC92NL01/tpsubscriptionsbanner.gif/64316564656562313431623534323330" target="_blank"><img src="http://ads4.udc.advance.net/RealMedia/ads/Creatives/NOLALIVE/TIMESPIC92NL01/tpsubscriptionsbanner.gif" width="468" height="60" alt="" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountFrg-Pbbxvr:+EZVQ=q1rqrro141o54230;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1"></td></tr>
 </tbody></table><img src="/images/spacer.gif" width="1" height="1" vspace="2"><br>
 <table width="763" border="0" cellspacing="0" cellpadding="0" bgcolor="#OO1B6A">
 <tbody><tr>
@@ -50,7 +52,7 @@ window.setTimeout ('rotate();',3000);
 <td width="355" colspan="5"><img src="http://www.nola.com/images/spacer.gif" width="1" height="1" vspace="2"></td>
 </tr>
 <tr valign="middle">
-<td width="1"><form method="get" action="/search/index.ssf"><input type="hidden" name="sconfig" value="nola"><input type="hidden" size="2" name="count" value="20"><input type="hidden" name="xpath.pubdate" value="06/04/2004 06/03/2004 06/02/2004 06/01/2004 05/31/2004 05/30/2004 05/29/2004 05/28/2004 05/27/2004 05/26/2004 05/25/2004 05/24/2004 05/23/2004 05/22/2004"><input type="hidden" name="xpath.category_letter" value=""><img src="http://www.nola.com/images/spacer.gif" width="1" height="1"></form></td>
+<td width="1"><form method="get" action="/search/index.ssf"><input type="hidden" name="sconfig" value="nola"><input type="hidden" size="2" name="count" value="20"><input type="hidden" name="xpath.pubdate" value="12/07/2004 12/06/2004 12/05/2004 12/04/2004 12/03/2004 12/02/2004 12/01/2004 11/30/2004 11/29/2004 11/28/2004 11/27/2004 11/26/2004 11/25/2004 11/24/2004"><input type="hidden" name="xpath.category_letter" value=""><img src="http://www.nola.com/images/spacer.gif" width="1" height="1"></form></td>
 <td width="180" align="right"><img src="http://www.nola.com/images/toprail/arrow.gif" width="14" height="10">&nbsp;<font face="arial,sans-serif" size="2" color="#FBBB7A"><a href="/search/"><font color="#FABA7A"><b>NEWSPAPER SEARCH</b></font></a></font>&nbsp;</td>
 <td width="160" align="center"><input type="text" name="xpath.any" maxlength="30" size="18" value="Enter Keyword(s)" onfocus="if ( value == 'Enter Keyword(s)' ) { value = ''; }" onblur="if ( value == '' ) { value = 'Enter Keyword(s)'; }" style="width: 142px"></td>
 <td width="60"><input type="image" src="http://www.nola.com/images/toprail/go_orange.gif" width="35" height="14" border="0"></td>
@@ -125,24 +127,24 @@ INSIDE<br>
 <td width="195" bgcolor="#EAEAEA" align="center">
 <img src="/images/spacer.gif" width="1" height="2" vspace="41" hspace="50"><br>
 <table width="190" border="0" cellspacing="2" cellpadding="3">
-<tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0"><font face="Arial,sans-serif" size="1">» <a href="/contests/" target="_blank">Win a trip to Voodoo Fest 2004!</a><br>
-<font face="Arial,sans-serif" size="1">» <a href="/neworleansguide/wheretostay/" return="" false;"="">Great Hotel Rates!</a><br>
-<font face="Arial,sans-serif" size="1">» <a href="/tpsubscribe/" target="_blank">Subscribe to the Times Picayune</a><br>
-</font></font></font></td></tr>
+<tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0"><font face="ARIAL" size="1">» <a href="/contests/" target="_blank">Win a Gourmet Food &amp; Wine Basket from Martin Wine Cellar!</a></font><br>
+<font face="ARIAL" size="1">» <a href="http://nola.com/mardigras/about/index.ssf?/mardigras/about/content/stories/hosts.html" target="_blank">Be a show host for NOLA.com</a></font><br>
+<font face="ARIAL" size="1">» <a href="/contests/" target="_blank">Win $100 from Dorignac's!</a></font><br>
+</td></tr>
 </tbody></table><img src="/images/spacer.gif" width="1" height="5"><br>
-<a href="http://ads5.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/1483516988/Sponsor1/default/empty.gif/64316564656562313430633038396330" target="_blank"><img src="http://ads5.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountfrg-pbbxvr:+EZVQ=q1rqrro140p089p0;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1">
+<a href="http://ads4.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/155610140/Sponsor1/default/empty.gif/64316564656562313431623534323430" target="_blank"><img src="http://ads4.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountFrg-Pbbxvr:+EZVQ=q1rqrro141o54240;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1">
 <img src="/images/spacer.gif" height="1" width="190" vspace="5"><br>
-<a href="http://ads5.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/1826826969/Tile1/NOLALIVE/MK_BLAUTOS_NL02/NOLA_BLAuto3_190x90.gif/64316564656562313430633038396330" target="_blank"><img src="http://ads5.udc.advance.net/RealMedia/ads/Creatives/NOLALIVE/MK_BLAUTOS_NL02/NOLA_BLAuto3_190x90.gif" width="190" height="90" alt="" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountfrg-pbbxvr:+EZVQ=q1rqrro140p089p0;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1">
+<a href="http://ads4.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/1950021712/Tile1/NOLALIVE/TIMESPIC101NL01/tpstoresupertile2.jpg/64316564656562313431623534323430" target="_blank"><img src="http://ads4.udc.advance.net/RealMedia/ads/Creatives/NOLALIVE/TIMESPIC101NL01/tpstoresupertile2.jpg" alt="" width="185" height="296" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountFrg-Pbbxvr:+EZVQ=q1rqrro141o54240;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1">
 <img src="/images/spacer.gif" height="1" width="190" vspace="5"><br>
 <table width="190" border="0" cellspacing="0" cellpadding="3">
 <tbody><tr><td width="190" align="center" bgcolor="#B4C0CD"><font face="arial,sans-serif" size="2" color="#FFFFFF"><b>FROM OUR ADVERTISERS</b></font></td></tr>
 <tr bgcolor="#FFFFFF"><td width="190"><img src="/images/spacer.gif" width="1" height="1" vspace="20" align="left"><font face="arial,sans-serif" size="1">&gt;&gt; <!--OAS AD="TxtLink1"-->
-<a href="http://ads5.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/11892423/TxtLink1/default/empty.gif/64316564656562313430633038396330" target="_blank"><img src="http://ads5.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a>
+<a href="http://ads4.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/1476615862/TxtLink1/default/empty.gif/64316564656562313431623534323430" target="_blank"><img src="http://ads4.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a>
 <br>&gt;&gt;&nbsp;<!--OAS AD="TxtLink2"-->
-<a href="http://ads5.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/153233744/TxtLink2/default/empty.gif/64316564656562313430633038396330" target="_blank"><img src="http://ads5.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a>
+<a href="http://ads4.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/1183657730/TxtLink2/default/empty.gif/64316564656562313431623534323430" target="_blank"><img src="http://ads4.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a>
 <br>&gt;&gt;&nbsp;<!--OAS AD="TxtLink3"-->
-<a href="http://ads5.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/1800418852/TxtLink3/default/empty.gif/64316564656562313430633038396330" target="_blank"><img src="http://ads5.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a>
-<img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountfrg-pbbxvr:+EZVQ=q1rqrro140p089p0;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1"></font></td></tr>
+<a href="http://ads4.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/359375438/TxtLink3/default/empty.gif/64316564656562313431623534323430" target="_blank"><img src="http://ads4.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a>
+<img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountFrg-Pbbxvr:+EZVQ=q1rqrro141o54240;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1"></font></td></tr>
 </tbody></table><img src="/images/spacer.gif" width="1" height="5"><br>
 <table width="190" border="0" cellspacing="2" cellpadding="3">
 <tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0" align="center"><font face="arial,sans-serif" size="2"><b>» <a href="#"><font color="#000000">Advertise With Us</font></a></b></font><br></td></tr>
@@ -182,15 +184,15 @@ INSIDE<br>
 <td width="195"><img src="/images/spacer.gif" width="195" height="10"></td></tr>
 </tbody></table>
 <map name="HNAVMAP">
-<area shape="rect" coords="1,1,48,22" href="/">
-<area shape="rect" coords="49,1,121,22" href="/news/">
-<area shape="rect" coords="122,1,174,22" href="/sports/">
-<area shape="rect" coords="175,1,271,22" href="/forums/">
-<area shape="rect" coords="272,1,325,22" href="/visitor/">
-<area shape="rect" coords="326,1,417,22" href="/live/">
-<area shape="rect" coords="418,1,468,22" href="/living/">
-<area shape="rect" coords="469,1,568,22" href="/entertainment/">
-<area shape="rect" coords="569,1,762,22" href="/classifieds/"> </map>
+<area shape="rect" coords="52,22,0,2" href="/">
+<area shape="rect" coords="54,2,130,22" href="/news/">
+<area shape="rect" coords="132,2,188,22" href="/sports/">
+<area shape="rect" coords="190,0,292,22" href="/forums/">
+<area shape="rect" coords="292,0,352,22" href="/visitor/">
+<area shape="rect" coords="352,0,402,22" href="/bourbocam/">
+<area shape="rect" coords="404,0,458,22" href="/living/">
+<area shape="rect" coords="460,0,568,22" href="/entertainment/">
+<area shape="rect" coords="762,22,570,0" href="/classifieds/"></map>
 <map name="CNAVMAP">
 <area shape="RECT" coords="103,51,193,79" href="/placead/" alt="Place an Ad">
 <area shape="RECT" coords="0,51,102,79" href="/classifieds/" alt="All Classifieds">
@@ -199,10 +201,10 @@ INSIDE<br>
 <area shape="RECT" coords="0,0,46,50" href="/jobs/" alt="Jobs">
 </map>
 <div id="NAVSPAN" style="position: absolute; top: 146; left: 10; height: 23; width: 763; background-color: #FFFFFF">
-<layer width="763" height="23" bgcolor="#FFFFFF"><img src="http://www.nola.com/dhtml/hnavbar_class/images/hz_nav_image_whiteline.gif" ismap="" usemap="#HNAVMAP" height="23" width="763" border="0"></layer></div>
+<layer width="763" height="23" bgcolor="#FFFFFF"><img src="http://www.nola.com/dhtml/hnavbar_class/images/nolanav.gif" ismap="" usemap="#HNAVMAP" height="23" width="763" border="0"></layer></div>
 <div id="CLASSNAVSPAN" style="position: absolute; top: 169; left: 578; height: 81; width: 195; background-color: #FFFFFF" class="menucursor">
 <layer width="195" height="81" bgcolor="#FFFFFF" class="menucursor"><img src="http://www.nola.com/dhtml/hnavbar_class/images/classified_links.gif" ismap="" usemap="#CNAVMAP" height="84" width="195" border="0"></layer></div>
 <script langauge="javascript" src="http://www.nola.com/dhtml/hnavbar_class/scripts/hPosition.js"></script>
-<a href="http://ads5.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/1748859552/Popup/default/empty.gif/64316564656562313430633038396330" target="_blank"><img src="http://ads5.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountfrg-pbbxvr:+EZVQ=q1rqrro140p089p0;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1">
+<a href="http://ads4.udc.advance.net/RealMedia/ads/click_lx.ads/www.nola.com/privacypolicy/index.ssf/NQS/399240772/Popup/default/empty.gif/64316564656562313431623534323430" target="_blank"><img src="http://ads4.udc.advance.net/RealMedia/ads/Creatives/default/empty.gif" width="2" height="2" alt="" border="0"></a><img src="http://www.nola.com/cgi-bin/placead_rm5/placead_rm5_cookie.cgi?zzDoNotCountFrg-Pbbxvr:+EZVQ=q1rqrro141o54240;+rkcverf=Sev,+31-Qrp-2010+23:59:59+TZG;+cngu=/;+qbznva=.abyn.pbz" height="1" width="1">
 
 </body></html>
