--- a/i/in/int/intermatwrestle.com.html
+++ b/i/in/int/intermatwrestle.com.html
@@ -1,52 +1,300 @@
-<!--The following is the downloaded HTML source of the intermatwrestle.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602200506id_/http%3A//www.intermatwrestle.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the intermatwrestle.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207125504id_/http%3A//www.intermatwrestle.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>InterMat Wrestling: A Click Above The Rest</title>
 </head>
 <body background="http://intermatwrestle.com/MenuBG.gif" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" text="#000000" vlink="#808080">
-<!--#include virtual="/common/HomePageMap.inc">-->
+<style>
+		a:link {color:blue;text-decoration:none }
+		a:active{color:red;text-decoration:none }
+		a:visited{color:blue;text-decoration:none }
+		a:hover{color:red;text-decoration:underline }
+</style>
+<script language="JavaScript" src="http://www.intermatwrestle.com/common/JSCookMenu/JSCookMenu.js"></script>
+<link rel="stylesheet" href="http://www.intermatwrestle.com/common/JSCookMenu/ThemePanel/theme.css" type="text/css">
+<script language="JavaScript" src="http://www.intermatwrestle.com/common/JSCookMenu/ThemePanel/theme.js"></script>
+<script language="JavaScript">
+<!--
+var myMenu =
+[
+    ['', 'News ', '', '', 'News at Intermat',
+        ['', 'What\'s New', '/new.asp', '_self', 'The Latest News'],
+        ['', 'Jobs', '/jobs/joblisting.asp', '_self', 'Job Postings on Intermat'],
+		['', 'Title IX', '/titleIX.asp', '_self', 'Title IX News'],
+		['', 'General', '/general.asp', '_self', 'General News'],
+		['', 'Intermat', '/intermatnews.asp', '_self', 'News about Intermat'],
+		['', 'About Us', '/about.asp', '_self', 'About Intermat'],
+	],
+	_cmSplit,
+    ['', 'Camps ', '/camps.asp', '_self', 'Camps',
+	], 
+	_cmSplit,
+    ['', 'Webstore ', 'http://www.intermatwrestle.com/webstore.asp', '_self', 'The best deals in wrestling equipment',
+	], 
+    _cmSplit,
+    ['', 'Age Levels', '', '', 'The different levels/types of wrestling',    
+        ['', 'College', '', '', 'College Wrestling',    
+            ['', 'News', '/college.asp', '_self', 'Latest College News'],  
+			['', 'Results', '/forms/results/collresmenu.asp', '_self', 'Latest College Results'],  
+			['', 'Events', '/events/college.asp', '_self', 'College Events'],  
+            ['', 'Links', '/college/collegelinks.asp', '_self', 'Links Related to College Wrestling']   
+		],   
+        ['', 'High School', '', '', 'High School Wrestling',    
+            ['', 'News', '/highsch.asp', '_self', 'High School News'],  
+			['', 'Results', '/forms/highschool/hsresstart.asp', '_self', 'High School Results'],  
+			['', 'Events', '/events/high_sch.asp', '_self', 'High School Events'],  
+            ['', 'Links', '/high_school/hslinks.asp', '_self', 'Links Related to High School Wrestling'],
+			['', 'Profiles', '/high_school/ind_prof.asp', '_self', 'Sign Up or View Individual Profiles']
+
+		],   
+        ['', 'Youth', '', '', 'Youth Wrestling',    
+            ['', 'News', '/youth.asp', '_self', 'Youth Wrestling News'],  
+			['', 'Results', '/youth/results.asp', '_self', 'Youth Wrestling Results'],  
+			['', 'Events', '/events/youth.asp', '_self', 'Youth Wrestling Events'],  
+            ['', 'Links', '/youth/links.asp', '_self', 'Links Related to Youth Wrestling'] 
+        ],
+		['', 'Freestyle/GR', '', '', 'Freestye/Greco-Roman Wrestling',    
+            ['', 'News', '/intl.asp', '_self', 'Freestyle/GR Wrestling News'],  
+			['', 'Results', '/intl/results.asp', '_self', 'Freestlye/GR Wrestling Results'],  
+			['', 'Events', '/events/usa.asp', '_self', 'Freestyle/GR Events'],  
+            ['', 'Links', '/intl/links.asp', '_self', 'Links Related to Freestyle/GR Wrestling']
+        ],
+		['', 'Women', '', '', 'Women\'s Wrestling',    
+            ['', 'News', '/women.asp', '_self', 'News on Women\'s Wrestling'],  
+			['', 'Results', '/women/results.asp', '_self', 'Results for Women\'s Wrestling'],  
+			['', 'Events', '/events/women.asp', '_self', 'Women\'s Wrestling Events'],  
+            ['', 'Links', '/women/other.asp', '_self', 'Links Related to Women\'s Wrestling']
+        ]
+    ],
+	_cmSplit,
+	['', 'Forums/Interact	', '', '', 'Use our Forums/Interactive Features',
+		['', 'Forums', 'http://www.intermatwrestle.com/forumsql/', '_self', 'Use Intermat\'s Forums'],   
+        ['', 'TV/Webcasts', 'http://www.intermatwrestle.com/tv.asp', '_self', 'Check out Wrestling on TV/Webcasts'],
+		['', 'Email Directory', '/e-mail/index.asp', '_self', 'Browse/Add to Intermat\'s Email Directory'], 
+		['', 'Graphics', '/graphics.asp', '_self', 'View Graphics'], 
+		['', 'Intermat Photos', '/pr/photos.asp', '_self', 'Browse Intermat\'s Photos'],
+		['', 'Your Voice', '/guestbook/comments.asp', '_self', 'Post and View Comments']
+
+	], 
+	_cmSplit,
+    ['', 'Links', '', '', 'Links Related to Wrestling',    
+        ['', 'Intermat Partners', '/advertise/partners.asp', '_self', 'Partners of Intermat'], 
+        ['', 'State Reps', '/general/imreps.asp', '_self', 'Representatives of Intermat around the nation'],
+		['', 'Other Sites', '/fans/sites.asp', '_self', 'Links to Other Wrestling Sites'],
+        ['', 'FAQ', '/general/bugs.asp', '_self', 'Frequently Asked Questions']
+	],   
+    _cmSplit,
+	['', 'PremiumSVC', '', '', 'Premium Service offers premium content',    
+        ['', 'Log In', '/pr/ps_login.asp', '_self', 'Log In to Premium Service'],
+        ['', 'Options', '/premmenu.asp', '_self', 'Options Available in Premium Service'],
+		['', 'Order', 'https://www.nwcaonline.com/ssl/PSorder.asp', '_self', 'Purchase Premium Service'],
+		['', 'Renew', 'https://www.nwcaonline.com/ssl/PSrenew.asp', '_self', 'Renew your expired Premium Service Account'],
+		['', 'Free Preview', '/general/quick.asp', '_self', 'A free preview of our Premium Service'],
+		['', 'FAQ', '/general/quick.asp', '_self', 'Frequently Asked Questions']
+	],
+	_cmSplit,
+		['', 'Search', '/site_search.asp', '', 'Search Intermat',    
+	],
+];
+--></script>
+<a href="http://www.intermatwrestle.com">
+<img src="/common/JSCookMenu/ThemePanel/menulogo2.gif" alt="Intermat's Homepage" border="0">
+</a>
+<div id="myMenuID"></div>
+<script language="JavaScript"><!--
+	cmDraw ('myMenuID', myMenu, 'hbr', cmThemePanel, 'ThemePanel');
+--></script>
 <div id="adbanner" style="visibility:visible;position:absolute;left:290px;top:25px;">
-		<!--#include virtual="ads/adrotate.asp"-->
+		
+
+<!--AdMentor from ASPCode.net-->
+<script language="JavaScript">
+var now = new Date();
+var index=now.getTime();
+document.write('<s' + 'cript  language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&z=2&target=_top&a=8&mgr=aspcode.net"></scr' + 'ipt>');
+</script><script language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&amp;z=2&amp;target=_top&amp;a=8&amp;mgr=aspcode.net"></script><noscript>
+<a target=_top href="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=click&z=2&a=8&mgr=aspcode.net">
+<img src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=img&z=2&a=8&mgr=aspcode.net" border="0">
+</a></noscript>
+<!--AdMentor from ASPCode.net-->
+
 </div>
 <table width="780" align="left" cellpadding="8">
 <tbody><tr>
-<td width="23%" valign="top"><!--#include virtual="/common/newleft.inc"--></td>
+<td width="23%" valign="top">
+<center>
+
+<center>
+<br>
+<!--<table border = "1" cellpadding="1" cellspacing="0" width=160 bgcolor= "#A8A8A8" bordercolor="#980000">
+  <tr><td>--><!-- include newsticker here" --><!--
+  <br>
+<font face="Arial, Helvetica, sans-serif" size="-2"> 
+          <center>
+            <a href="http://www.intermatwrestle.com/new.asp"><font size="1">What's New
+            </font></a>
+          </font>
+          </center>
+          </font></a></font>
+  
+  </td></tr>
+</table>
+<p><table border = "1" cellpadding="1" cellspacing="0" width=155 bordercolor="#003399">
+  <tr><td>--><!-- include result ticker here --><!--
+  <br>
+<font face="Arial, Helvetica, sans-serif" size="-2"> 
+          <center>
+            <a href="http://www.intermatwrestle.com/college/results/results.asp"><font size="1">Dual Meets
+            </font></a> |  
+          </font><font face="Arial, Helvetica, sans-serif" size="-2"><a href="http://www.intermatwrestle.com/college/results/tournaments.asp"><font size="1"> 
+            Tournaments
+          </center>
+          </font></a></font>
+  
+  </td></tr>
+</table></p>-->
+<p>
+<a href="http://www.nwcaonline.com" target="_blank">
+<img border="0" src="http://www.intermatwrestle.com/images/nwca2.jpg" width="125" height="146"></a><br>
+</p>
+
+<table border="1" cellpadding="1" cellspacing="0" width="155" bordercolor="#003399">
+  <tbody><tr> 
+    <td width="145"> <form name="form1" method="post" action="http://www.intermatwrestle.com/pr/ps_verify.asp">
+        <center>
+          <img src="http://www.intermatwrestle.com/images/pslogintitle.gif" width="100" height="18" alt="Login To Premium Service">
+		   <font face="Arial, Helvetica, sans-serif" size="-2"> 
+          <center>
+            <a href="https://www.nwcaonline.com/ssl/PSorder.asp"><font size="1">Sign 
+            up<br>
+            </font></a> 
+          </center>
+          </font><font face="Arial, Helvetica, sans-serif" size="-2"><a href="http://www.intermatwrestle.com/general/quick.asp"><font size="1"> 
+          <center>
+            About Premium Service 
+          </center>
+          </font></a></font>
+        </center>
+       
+          <img src="http://www.intermatwrestle.com/images/login.gif" width="35" height="18" alt="Enter Your User ID"> 
+          <input type="text" name="userid" size="10" maxlength="20">
+          <br>
+          <img src="http://www.intermatwrestle.com/images/passwd.gif" width="35" height="18" alt="Enter Your Password"> 
+          <input type="password" name="password" size="10" maxlength="20">
+		  <center>
+          <input type="submit" name="Submit" value="Enter">
+        </center>
+        <p></p>
+        
+      </form></td>
+  </tr>
+  </tbody></table>
+  <p><!--AdMentor from ASPCode.net-->
+<script language="JavaScript">
+var now = new Date();
+var index=now.getTime();
+document.write('<s' + 'cript  language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&z=1&target=_blank&a=3&mgr=aspcode.net"></scr' + 'ipt>');
+ </script><script language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&amp;z=1&amp;target=_blank&amp;a=3&amp;mgr=aspcode.net"></script><noscript>
+ <a target=_blank href="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=click&z=1&a=3&mgr=aspcode.net">
+<img src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=img&z=1&a=3&mgr=aspcode.net" border="0">
+</a></noscript>
+<!--AdMentor from ASPCode.net-->
+<br>
+</p>
+ 
+<p> 
+</p><p><!--AdMentor from ASPCode.net-->
+<script language="JavaScript">
+var now = new Date();
+var index=now.getTime();
+document.write('<s' + 'cript  language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&z=1&target=_blank&a=20&mgr=aspcode.net"></scr' + 'ipt>');
+</script><script language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&amp;z=1&amp;target=_blank&amp;a=20&amp;mgr=aspcode.net"></script><noscript>
+<a target=_blank href="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=click&z=1&a=20&mgr=aspcode.net">
+<img src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=img&z=1&a=20&mgr=aspcode.net" border="0">
+</a></noscript>
+<!--AdMentor from ASPCode.net-->
+</p>
+
+<p><!--AdMentor from ASPCode.net-->
+<script language="JavaScript">
+var now = new Date();
+var index=now.getTime();
+document.write('<s' + 'cript  language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&z=1&target=_blank&a=19&mgr=aspcode.net"></scr' + 'ipt>');
+</script><script language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&amp;z=1&amp;target=_blank&amp;a=19&amp;mgr=aspcode.net"></script><noscript>
+<a target=_blank href="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=click&z=1&a=`9&mgr=aspcode.net">
+<img src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=img&z=1&a=19&mgr=aspcode.net" border="0">
+</a></noscript>
+<!--AdMentor from ASPCode.net-->
+ 
+</p><p> 
+</p><p><!--AdMentor from ASPCode.net-->
+<script language="JavaScript">
+var now = new Date();
+var index=now.getTime();
+document.write('<s' + 'cript  language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&z=1&target=_blank&a=18&mgr=aspcode.net"></scr' + 'ipt>');
+</script><script language="JavaScript" src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=js&amp;z=1&amp;target=_blank&amp;a=18&amp;mgr=aspcode.net"></script><noscript>
+<a target=_blank href="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=click&z=1&a=18&mgr=aspcode.net">
+<img src="http://www.intermatwrestle.com/admentornet/admentorserve.aspx?type=img&z=1&a=18&mgr=aspcode.net" border="0">
+</a></noscript>
+<!--AdMentor from ASPCode.net-->
+</p>
+
+
+</center></center></td>
 <td width="77%" valign="top">
 <!--InterMat Page Contents go below this comment line-->
 <center><p align="center"><b><font face="Arial" size="5" color="#000000">Privacy Statement for InterMat Wrestling</font></b></p><hr>
 </center><font face="Arial"> 
 
-<input type="hidden" value="4" name="page"><font size="2">
+<input type="hidden" value="4" name="page">
+<p><font size="2">
 
 InterMat Inc. has created this privacy statement in order to 
 demonstrate our firm commitment to privacy.  The following discloses our 
-information gathering and dissemination practices for this website: InterMat Wrestling.</font><p><font size="2">We use your IP address to help diagnose problems with our server, 
+information gathering and dissemination practices for this website: InterMat Wrestling.</font></p>
+<p><font size="2">We use your IP address to help diagnose problems with our server, 
 and to administer our Web site.</font>  </p><p><font size="2">Our site uses cookies to keep track of your shopping
 cart in the InterMat Wrestling Store.  We also use per-session cookies to save your
 Premium Service Identification so you don't have to re-enter it each time you visit
 a new page within Premium Service.</font></p><p><font size="2">This site contains links to other sites.  <b>InterMat Wrestling</b> is not responsible for the privacy practices or the content of such Web sites.</font></p><p><font size="2">Our site uses an order form for customers to request information, products, and services.  We collect visitor's contact information (like their email address) and financial information (like their account or credit card numbers).  Contact information from the order form is used to send orders to our customers.  The customer's contact information is used to get in touch with the visitor when necessary.  Users may opt-out of receiving future mailings; see the choice/opt-out section below.  Financial information that is collected is used to bill the user for products and services.</font></p><h2><font size="2">Public Forums</font></h2>
+<p>
 <font size="2">
-        This site makes chat rooms, forums, message boards, and/or news groups available to its users.  Please remember that any information that is disclosed in these areas becomes public information and you should exercise caution when deciding to disclose your personal information.</font><h2><font size="2">Security</font></h2>
+        This site makes chat rooms, forums, message boards, and/or news groups available to its users.  Please remember that any information that is disclosed in these areas becomes public information and you should exercise caution when deciding to disclose your personal information.</font></p>
+<h2><font size="2">Security</font></h2>
+<p>
 <font size="2">
         This site has security measures in place to protect the loss, misuse and alteration of the information under our control.
 
-</font><h2><font size="2">Choice/Opt-Out</font></h2><font size="2">Our site provides users the opportunity to opt-out of receiving communications from us and our partners at the point where we request information about the visitor.</font><p><font size="2">This site gives users the following options for removing their information from our database to not receive future communications or to no longer receive our service.
+</font></p>
+<h2><font size="2">Choice/Opt-Out</font></h2>
+<p><font size="2">Our site provides users the opportunity to opt-out of receiving communications from us and our partners at the point where we request information about the visitor.</font></p>
+<p><font size="2">This site gives users the following options for removing their information from our database to not receive future communications or to no longer receive our service.
 Please send an email to <a href="mailto:intermat@intermatwrestle.com">intermat@intermatwrestle.com</a>
 regarding the information you received from InterMat.</font></p><h2><font size="2">Correct/Update</font></h2>
+<p>
 <font size="2">
 This site gives users the following options for changing and modifying 
 information previously provided. Please send an email to <a href="mailto:intermat@intermatwrestle.com">intermat@intermatwrestle.com</a>
-regarding which information you would like updated.</font><h2><font size="2">Contacting the Web Site</font></h2>
+regarding which information you would like updated.</font></p>
+<h2><font size="2">Contacting the Web Site</font></h2>
+
+<p>
 
 <font size="2">
 
 If you have any questions about this privacy statement, the
 practices of this site, or your dealings with this Web site,
 you can contact</font> <br>
-&nbsp;<p>
+&nbsp;</p>
+<p>
 </p><address><font size="2">Tom Owens</font></address>
 <address><a href="mailto:tomo@intermatwrestle.com"><font size="2">tomo@intermatwrestle.com</font></a></address>
+
+
+
+<address><br>
+</address>
 
 
 
@@ -60,6 +308,18 @@ you can contact</font> <br>
 <table>
     <tbody><tr>
       <td width="23%" valign="top">&nbsp;</td>
-      <td width="77%" valign="top"><hr><!--#include virtual="/common/bottom.inc"--></td>
+      <td width="77%" valign="top"><hr>
+<p align="center"><font size="2"><a href="http://www.intermatwrestle.com/about.asp">About
+InterMat</a>&nbsp; |&nbsp; <a href="http://www.intermatwrestle.com/general/bugs.asp">Troubleshooting</a>&nbsp; |&nbsp; <a href="http://www.intermatwrestle.com/advertise/index.asp">Advertise
+on InterMat</a>&nbsp; |&nbsp;<a href="http://www.intermatwrestle.com/guestbook/comments.asp">Your Voice (Viewer Comments)<br>
+</a><br><br>
+Technical Support contact <a href="mailto:techsup@intermatwrestle.com">techsup@intermatwrestle.com</a><br>
+Questions or Comments&nbsp; about InterMat contact: <a href="mailto:intermat@intermatwrestle.com">intermat@intermatwrestle.com</a></font><em><font size="2" color="#FF0000"><br>
+</font><font size="2">
+Copyright © 1998-2004&nbsp; InterMat. All rights reserved.<br>
+Do not duplicate or redistribute in any form without written permission.<br>
+<a href="http://www.intermatwrestle.com/privacy.asp">Privacy Statement</a></font></em>
+
+</p></td>
     </tr>
 </tbody></table></body></html>
